<?xml version="1.0"?>
<package>
  <name>eurobench_reemc_cart</name>
  <version>1.0.0</version>
  <description>Simulation files Eurobench-BEAST project.</description>
  <maintainer email="suriani@diag.uniroma1.it">V. Suriani</maintainer>
  <license>Modified BSD</license>
  <author email="suriani@diag.uniroma1.it">V. Suriani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_controller_configuration_gazebo</run_depend>
  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_hardware_gazebo</run_depend>
  <run_depend>reemc_bringup</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>reemc_gazebo</run_depend>

</package>
